--- a/configs/config.json
+++ b/configs/config.json
@@ -1,4 +1,5 @@
 {
+  "cnf_path": "/etc/mysql/mariadb.conf.d",
   "service_name": "conductor",
   "pool_name": "rootpool",
   "pool_path": "/rootpool",
@@ -8,5 +9,6 @@
   "cast_path": "/maria_cast",
   "replica_path": "/maria_replica",
   "port_from": 3307,
-  "port_to": 3399
+  "port_to": 3399,
+  "systemd_unit_name": "mariadb.service"
 }
