--- a/configs/mariadb@.service
+++ b/configs/mariadb@.service
@@ -1,11 +1,14 @@
 [Unit]
-Description=MariaDB database server (multi-instance %I)
+Description=MariaDB 10.5.12 database server (multi-instance %I)
+Documentation=man:mariadbd(8)
 Documentation=https://mariadb.com/kb/en/library/systemd/
 After=network.target
-ConditionPathExists=!/etc/mysql/mariadb.conf.d/my%I.cnf
+ConditionPathExists=/etc/my.%I.cnf
+
 
 [Install]
 WantedBy=multi-user.target
+
 [Service]
 Type=notify
 PrivateNetwork=false
@@ -13,9 +16,9 @@ CapabilityBoundingSet=CAP_IPC_LOCK CAP_DAC_OVERRIDE CAP_AUDIT_WRITE
 PrivateDevices=false
 ProtectSystem=full
 ProtectHome=true
-ExecStartPre=/usr/bin/mysql_install_db $MYSQLD_MULTI_INSTANCE
+
 ExecStart=/usr/sbin/mariadbd $MYSQLD_MULTI_INSTANCE $MYSQLD_OPTS
-ExecStartPost=/etc/mysql/debian-start
+
 KillSignal=SIGTERM
 SendSIGKILL=no
 Restart=on-abort
@@ -24,7 +27,9 @@ UMask=007
 PrivateTmp=false
 TimeoutStartSec=900
 TimeoutStopSec=900
-Environment='MYSQLD_MULTI_INSTANCE=--defaults-group-suffix=.%I'
+
+Environment=MYSQLD_MULTI_INSTANCE=--defaults-file=/etc/my.%I.cnf
+
 User=mysql
 Group=mysql
 LimitNOFILE=32768
